fix: support cancel at period end
